Update rxy views

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,16 @@
-<h1>联系我们</h1>
-
-<%= render 'form' %>
+<div class="features_page" id="features">
+  <div class="container"><!-- Feature Wrapper -->
+    <div class="feature_wrapper option2">
+      <div class="section_header">
+        <h3>提交留言</h3>
+      </div>
+      <!-- Features Row -->
+      <div class="row-fluid">
+        <div class="span10 offset2">
+          <%= render 'form' %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
