--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,4 +1,9 @@
-<div class="navbar transparent navbar-inverse navbar-fixed-top">
+<% if @page && @page.name == 'index' %>
+    <div class="navbar transparent navbar-inverse navbar-fixed-top">
+<% else %>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+<% end %>
+
   <div class="navbar-inner">
     <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -6,7 +11,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
-        <%= link_to image_tag("/assets/logo.png", width: '80px'), root_path, :class => 'logo' %>
+        <%= link_to image_tag("/assets/logo2-2.png", width: '220px'), root_path, :class => 'brand' %>
         <div class="nav-collapse collapse">
             <ul class="nav pull-right">
                 <li><a href="/" class="active">首页</a></li>
@@ -21,7 +26,7 @@
                         <li><a href="/pages/product">瑞信云产品</a></li>
                         <li><a href="/pages/service">瑞信云服务</a></li>
                         <li><a href="/pages/features">功能介绍</a></li>
-                        <li><a href="/pages/templetes">模板介绍</a></li>
+                        <li><a href="/product_cates/1">成功案例</a></li>
                         <li><a href="/pages/showcase">行业应用方案</a></li>
                         <li><a href="/pages/markting">企业网络营销整体托管</a></li>
                     </ul>
@@ -53,8 +58,7 @@
 
                 <li><a href="pages/contact">联系我们</a></li>
                 <% if user_signed_in? %>
-                    <li><%= link_to '后台主页', user_path(current_user), class: "btn-header" %></li>
-                    <li><%= link_to '退出', destroy_user_session_path, :method=>'delete', class: "btn-header" %></li>
+                    <li><%= link_to '后台', user_path(current_user), class: "btn-header" %></li>
                 <% else %>
                     <li><%= link_to '登录', new_user_session_path, class: "btn-header" %></li>
                 <% end %>
