--- a/public/page/features.html.erb
+++ b/public/page/features.html.erb
@@ -1,156 +1,300 @@
-<%= content_for(:head) do %>
-  <%= stylesheet_link_tag "theme/features" %>
-<% end %>
-
-
-<div id="features" class="features_page">
-  <div class="container">
-      <!-- Feature Wrapper -->
-      <div class="feature_wrapper option1">
-          <div class="section_header">
-              <h3>Features <span>(Option 1)</span></h3>
-          </div>
-
-          <div class="row subtitle">
-              <h2>
-                  There are many variations of passages of available, but the majority have suffered alteration in some on form, by injected humour, or randomised words which look even slightly believable.
-              </h2>
-          </div>
-
-          <div class="row feature">
-              <div class="span6">
-                  <img src="/assets/showcase1.png">
-              </div>
-              <div class="span6 info">
-                  <h3>
-                      <img src="/assets/features-ico1.png">
-                      Beautiful on all devices
-                  </h3>
-                  <p>
-                      There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
-                  </p>
-              </div>
-          </div>
-          <div class="row feature ss last">
-              <div class="span6 info">
-                  <h3>
-                      <img src="/assets/features-ico2.png">
-                      Blog page included
-                  </h3>
-                  <p>
-                      There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
-                  </p>
-              </div>
-              <div class="span6">
-                  <img src="/assets/showcase2.png" class="pull-right">
-              </div>
-          </div>
+<div class="features_page" id="features">
+  <div class="container"><!-- Feature Wrapper -->
+    <div class="feature_wrapper option1">
+      <div class="div_header">
+        <h3>手机应用功能介绍</h3>
       </div>
 
-      <!-- Feature Wrapper -->
-      <div class="feature_wrapper option2">
-          <div class="section_header">
-              <h3>Features <span>(Option 2)</span></h3>
-          </div>
+      <div class="row subtitle">
 
-          <!-- Features Row -->
-          <div class="row">
-              <!-- Feature -->
-              <div class="span6 feature">
-                  <div class="box">
-                      <img class="one" src="/assets/features-ico4.png">
-                  </div>
-                  <div class="text">
-                      <h6>Desktop publishing packages </h6>
-                      <p>
-                          There are many variations of passages of generators on the  embarrassing hidden in randomised words which don't look even by these distribution of letters, as opposed to using content here, content here making.</p>
-                  </div>
-              </div>
-              <!-- Feature -->
-              <div class="span6 feature right">
-                  <div class="box">
-                      <img class="two" src="/assets/features-ico5.png">
-                  </div>
-                  <div class="text">
-                      <h6>Desktop publishing packages </h6>
-                      <p>
-                          There are many variations of passages of generators on the  embarrassing hidden in randomised words which don't look even by these distribution of letters, as opposed to using content here, content here making.</p>
-                  </div>
-              </div>
-          </div>
 
-          <!-- Features Row -->
-          <div class="row last">
-              <!-- Feature -->
-              <div class="span6 feature">
-                  <div class="box">
-                      <img class="one" src="/assets/features-ico6.png">
-                  </div>
-                  <div class="text">
-                      <h6>Desktop publishing packages </h6>
-                      <p>
-                          There are many variations of passages of generators on the  embarrassing hidden in randomised words which don't look even by these distribution of letters, as opposed to using content here, content here making.</p>
-                  </div>
-              </div>
-              <!-- Feature -->
-              <div class="span6 feature right">
-                  <div class="box">
-                      <img class="two" src="/assets/features-ico7.png">
-                  </div>
-                  <div class="text">
-                      <h6>Desktop publishing packages </h6>
-                      <p>
-                          There are many variations of passages of generators on the  embarrassing hidden in randomised words which don't look even by these distribution of letters, as opposed to using content here, content here making.</p>
-                  </div>
-              </div>
-          </div>
-      </div>
+<!-- start span3 -->
+<div class="span2 bs-docs-sidebar"  data-spy="affix" data-offset-top="100">
+  <ul class="nav nav-list bs-docs-sidenav">
+    <li><a href="#nav1"><i class="icon-chevron-right"></i>公司介绍</a></li>
+    <li><a href="#nav2"><i class="icon-chevron-right"></i>信息列表（不分类）</a></li>
+    <li><a href="#nav3">信息列表（二级分类）</a></li>
+    <li><a href="#nav4">图片集（不分类）</a></li>
+    <li><a href="#nav5">图片集（二级分类）</a></li>
+    <li><a href="#nav6">视频集</a></li>
+    <li><a href="#nav7">优惠券</a></li>
+    <li><a href="#nav8">LBS优惠券</a></li>
+    <li><a href="#nav9">预约表格</a></li>
+    <li><a href="#nav10">意见反馈</a></li>
+    <li><a href="#nav11">通讯录</a></li>
+    <li><a href="#nav12">门店查询</a></li>
+    <li><a href="#nav13">信息推送</a></li>
+    <li><a href="#nav14">嵌入网站</a></li>
+    <li><a href="#nav15">在线客服</a></li>
+    <li><a href="#nav16">自定义表格</a></li>
+  </ul>
+</div>
 
-      <!-- Feature Wrapper -->
-      <div class="feature_wrapper option3">
-          <div class="section_header">
-              <h3>Features <small>(Option 3)</small></h3>
-          </div>
 
-          <!-- Features Row -->
-          <div class="row">
-              <!-- Feature -->
-              <div class="span4 feature">
-                  <div class="img">
-                      <img src="/assets/features-ico6.png">
-                  </div>
-                  <div class="text">
-                      <h6>Plan</h6>
-                      <p>
-                          There are many variations passages generators on the  embarrassing hidden in randomised words which don't look even slightly distracted content here making it look like.
-                      </p>
-                  </div>
-              </div>
-              <!-- Feature -->
-              <div class="span4 feature">
-                  <div class="img">
-                      <img src="/assets/features-ico5.png">
-                  </div>
-                  <div class="text">
-                      <h6>Design</h6>
-                      <p>
-                          There are many variations passages generators on the  embarrassing hidden in randomised words which don't look even slightly distracted content here making it look like.    
-                      </p>
-                  </div>
-              </div>
-              <!-- Feature -->
-              <div class="span4 feature last">
-                  <div class="img">
-                      <img src="/assets/features-ico7.png">
-                  </div>
-                  <div class="text">
-                      <h6>Develop</h6>
-                      <p>
-                          There are many variations passages generators on the  embarrassing hidden in randomised words which don't look even slightly distracted content here making it look like.    
-                      </p>
-                  </div>
-              </div>
-          </div>
-      </div>
+<!-- start span9 -->
+<div class="span10" style="margin-left: 280px;">
+<div id="nav1">&nbsp;
+<hr />
+<h2>公司介绍</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>介绍公司基本情况，包括：公司地址、电话、传真、网站；经营描述、特色、规模、各项荣誉；办公环境、员工图片等。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images//about-merchant-img.png" style="border:0px; height:330px; width:250px" /></p>
+</div>
+</div>
+
+<div id="nav2">&nbsp;
+<hr />
+<h2>信息列表（不分类）</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）用列表的形式对你的产品、服务进行（不分类）描述；<br />
+<strong>例如：服务列表-汽车行业 （其它行业类同）<br />
+标题：四轮定位|洗车|打蜡|喷漆<br />
+详细：四轮定位是以车的四轮参数为依据，通过调整以确保车辆良好的行驶性能。</strong><br />
+2）不同行业用途，例如：餐牌、新闻列表、产品服务、常见问题、使用帮助等。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/level1-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav3">&nbsp;
+<hr />
+<h2>信息列表（二级分类）</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）该功能适用于大部分商家用作产品、服务的分类介绍 (2 层)（大类、细项）；<br />
+<strong>例如：餐牌（其它行业类同）<br />
+大类：菜式|主食|汤|酒牌|甜品<br />
+细项：菜式（西红柿炒牛肉、蘑菇炖小鸡、糖醋排骨）<br />
+详细：西红柿炒牛肉 推荐度：5星，价格 20元/份</strong><br />
+2）不同行业用途，例如：餐牌、新闻列表、产品服务、常见问题等（分类）列表。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/level2-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav4">&nbsp;
+<hr />
+<h2>图片集（不分类）</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）尽量使用能引起用户兴趣的图片分享给你的用户，图片中加注释更能吸引用户注意;<br />
+2）图片集可用于：产品、活动、优惠、聚会等（不分类）的精彩图片展示。<br />
+<strong>例如：婚纱套装 （其它行业类同）<br />
+标题：复古旗袍|晚装|晚礼服|时尚婚纱|宫廷婚纱<br />
+详细：复古旗袍-图1、复古旗袍-图2、复古旗袍-图3</strong></p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/photo-gallery-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav5">&nbsp;
+<hr />
+<h2>图片集（二级分类）</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）尽量使用能引起用户兴趣的图片分享给你的用户，图片中加注释更能吸引用户注意；<br />
+2）该功能适用于大部分商家用作产品、活动、优惠图片分类展示 (2 层)（大类、细项）。<br />
+<strong>例如：结婚礼服 （其它行业类同）<br />
+大类：婚纱|礼服|晚装|西装|套装<br />
+细项：婚纱（复古旗袍、晚装、晚礼服、时尚婚纱、宫廷婚纱）<br />
+详细：复古旗袍-图1、复古旗袍-图2、复古旗袍-图3</strong></p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/photo-gallery-level2-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav6">&nbsp;
+<hr />
+<h2>视频集</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）上传实用的或者极具娱乐性的精彩视频去感染你的观众；<br />
+2）视频集可为你的产品提供产品演示、使用指南或视频教程，让用户更直观的了解你们的服务。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/video-gallery-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav7">&nbsp;
+<hr />
+<h2>优惠券</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）优惠券是有效的营销利器，商家能实现优惠券电子化；实时、免费、有针对性地把优惠券推送到消费者手上。消费者获取及时、携带方便，有效提高突发性消费心理，并可以通过邮件、微博等方式，把你的优惠券分享出去，吸引更多的顾客；<br />
+2）在你的门店或传单上印上你的移动应用优惠券信息，吸引更多的用户下载你的移动应用。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/simple-coupon-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav8">&nbsp;
+<hr />
+<h2>LBS优惠券</h2>
+
+<div class="content">
+<p>1）&lsquo;LBS&rsquo;是基于地理位置的服务，&lsquo;优惠券&rsquo;是有效的营销利器，&lsquo;LBS优惠券&rsquo;是极具游戏性、趣味性、基于地理位置服务（LBS）的手机优惠券；<br />
+2）消费者只需通过&lsquo;LBS 优惠券&rsquo;功能，在商家门店附近进行&lsquo;签到&rsquo;，即可获取商家提供的特别优惠，签到越多，优惠越多；<br />
+3）在你的门店或传单上印上你的&lsquo;LBS优惠券&rsquo;信息，吸引更多的用户下载你的移动应用。</p>
+
+<p>&nbsp;</p>
+
+<p style="text-align:center"><img alt="LBS优惠券" src="http://www.apps123.cn/templets/apps123/images/lbs-coupon-img.jpg" style="border:0px; height:750px; width:800px" /></p>
+</div>
+</div>
+
+<div id="nav9">&nbsp;
+<hr />
+<h2>预约表格</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>可用于预约申请、信息登记、问卷调查、投诉建议等，便于商家收集用户有价值的信息。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img src="http://www.apps123.cn/templets/apps123/images/enquiry-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav10">&nbsp;
+<hr />
+<h2>意见反馈</h2>
+
+<div class="content">
+<p>1）为用户提供意见反馈的途径，允许用户通过该功能拍照或使用手机中现有的图片，以邮件的方式发送到你的邮箱，使商家及时掌握用户的动态、投诉、建议；<br />
+2）该功能适用于：即时报道、实况反映、图片记录汇报、图片投诉、建议等方面。</p>
+
+<h4>&nbsp;</h4>
+
+<p style="text-align:center"><img alt="意见反馈" src="http://www.apps123.cn/templets/apps123/images/user-feedback-img.jpg" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav11">&nbsp;
+<hr />
+<h2>通讯录</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）为用户提供一个多选择的联系列表，可用作公司客服、销售、服务人员的联系列表；<br />
+2）可用作公司团队介绍，尤其适合律师、财务顾问、理财顾问等行业，使用户通过通讯录快速、方便的找到联系人，进一步了解具体的信息，如：姓名、图片、简历、服务描述等信息。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img alt="通讯录" src="http://www.apps123.cn/templets/apps123/images/about-team-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav12">&nbsp;
+<hr />
+<h2>门店查询</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）提供各门店的地图、地址线路指引，特出一个或多个门店的地图位置，为你的客户、供应商、粉丝提供最简单、直接的方法与你取得联系；<br />
+2）利用地图功能，整合同类信息资源，例如：景点、酒吧、购物中心等，使用户通过地图快速、方便的找到目的地，进一步了解具体的信息，如：地址、电话、邮件、地图、公交路线、营业时间等。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img alt="门店查询" src="http://www.apps123.cn/templets/apps123/images/branches-enquiry-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav13">&nbsp;
+<hr />
+<h2>信息推送</h2>
+
+<div class="content">
+<p>1）直接推送、发布通知、优惠信息到用户手机，完全免费，无需通过微博、博客、网站等渠道，第一时间通知到用户。 用户可查看通知信息或点击进入查看更具体的内容；<br />
+2）利用信息推送功能，整合同类信息资源，例如：股票、新闻、时事、折扣等，通过直接推送信息到用户手机，使用户快速、方便地了解最新资讯。</p>
+
+<p>&nbsp;</p>
+
+<p style="text-align:center"><img alt="信息推送" src="http://www.apps123.cn/templets/apps123/images/message-center-img.jpg" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav14">&nbsp;
+<hr />
+<h2>嵌入网站</h2>
+
+<div class="content">
+<h4>小贴士：</h4>
+
+<p>1）只需输入您的淘宝店网址、微博网址，就可轻松嵌入到您专属的APP中；<br />
+2）为达到最佳效果，请在&ldquo;嵌入网站&rdquo;前，用手机浏览器测试该网址是否适合手机访问。</p>
+
+<h4>功能特色：</h4>
+
+<p style="text-align:center"><img alt="嵌入网站" src="http://www.apps123.cn/templets/apps123/images/link-web-img.png" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav15">&nbsp;
+<hr />
+<h2>在线客服</h2>
+
+<div class="content">
+<p>1）【在线客服】是增值服务功能，使用费 +2000元 （Web APP不支持）；<br />
+2）可作类似网站&ldquo;在线客服&rdquo;功能使用；<br />
+3）可用作为解答专业问题的&ldquo;一对一咨询&rdquo;功能使用。</p>
+
+<p>&nbsp;</p>
+
+<p style="text-align:center"><img alt="在线客服" src="http://www.apps123.cn/templets/apps123/images/chat-img.jpg" style="border:0px" /></p>
+</div>
+</div>
+
+<div id="nav16">&nbsp;
+  <hr />
+  <h2>自定义表格</h2>
+
+  <div class="content">
+    <p><span style="color:rgb(255, 0, 0)">1）【自定义表格】是增值服务功能，使用费 +500元 （Web APP不支持后台回复功能）</span><br />
+    2）商家可自行搭配，组合成不同的表单，可用于申请表、预约表、意见反馈表、调查表、信息登记表&hellip;&hellip;便于商家收集用户信息，方便商家以后推广优惠信息。</p>
+
+    <p>&nbsp;</p>
+
+    <p style="text-align:center"><img alt="自定义表格" src="http://www.apps123.cn/templets/apps123/images/flexi-form-img.png" style="border:0px" /></p>
   </div>
+</div>
+</div><!-- end span9 -->
+
+</div>
+</div>
+</div>
 </div>
