--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,3 @@
-@import "theme/bootstrap.min";
-@import "theme/bootstrap-responsive.min";
-@import "theme/bootstrap-overrides";
+@import "bootstrap/bootstrap.min";
+@import "bootstrap/bootstrap-responsive.min";
+@import "bootstrap/bootstrap-overrides";
