--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -3,9 +3,9 @@
 
   <div class="form-inputs">
     <%= f.input :title, input_html: {class: "input-block-level"} %>
-    <%= f.input :content, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'simple'}, height: "700px" } %>
+    <%#= f.input :content, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'simple'}, height: "700px" } %>
     <%#= f.input :title %>
-    <%#= f.input :content %>
+    <%= f.input :content, input_html: {class: "input-block-level", rows: 20}  %>
     <%= f.input :name %>
     <%= f.input :keywords %>
   </div>
