--- a/app/views/product_cates/show.html.erb
+++ b/app/views/product_cates/show.html.erb
@@ -1,5 +1,41 @@
-<p>
-  <%= @product_cate.name %>
-</p>
+<div class="features_page" id="features">
+  <div class="container"><!-- Feature Wrapper -->
+    <div class="feature_wrapper option2">
+      <div class="section_header">
+        <h3>成功案例</h3>
+      </div>
+      <!-- Features Row -->
+      <div class="row-fluid">
+        <div class="span2 bs-docs-sidebar"  data-spy="affix" data-offset-top="40">
+          <ul class="nav nav-list bs-docs-sidenav">
+            <% @product_cates.each_with_index do |item, index| %>
+              <li><a href="/product_cates/<%= item.id %>#nav<%=index %>"><%= item.name %></a></li>
+            <% end %>
+          </ul>
+        </div>
 
-<%= link_to '返回', product_items_path %>
+        <div class="span10" style="margin-left: 180px;">
+          <div class="row"><!-- Feature -->
+            <% @product_cate.product_items.order("updated_at DESC").each do |item| %>
+              <div class="span6 feature">
+                <table class="table table-bordered">
+                  <tr>
+                    <td><%= image_tag item.image_url, width: '200px' %></td>
+                    <td>
+                      <h6><%= item.title %></h6>
+                      <p><span style="line-height:1.6em">
+                      <%= item.content %>
+                      </span></p>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            <% end %>
+            <!-- Feature -->
+          </div><!-- end row -->
+        </div><!-- end span10 -->
+    </div>
+  </div>
+</div>
+
+
