--- a/public/page/contact.html.erb
+++ b/public/page/contact.html.erb
@@ -1,7 +1,3 @@
-<%= content_for(:head) do %>
-  <%= stylesheet_link_tag "theme/contact" %>
-<% end %>
-
 <div id="contact">
     <div class="container">
         <div class="section_header">
@@ -11,8 +7,8 @@
             <p>
                通过留言提交你的需求，我们会及时响应，为你提供专业咨询服务。</p>
 
-            <%= simple_form_for(@comment) do |f| %>
-                <%= f.error_notification %>
+            <form accept-charset="UTF-8" action="/comments" class="simple_form new_comment" id="new_comment" method="post">
+                <div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="Nv/vb/NEq7/GpxP41J354UVzP83nRYGytPH6CQjJ27c=" /></div>
                 <div class="row form">
                     <div class="span6 box">
                         <input type="text" name="comment[name]" placeholder="姓名" />
@@ -32,15 +28,17 @@
                         <input type="submit" value="提交我的信息">
                     </div>
                 </div>
-            <% end %>
+            </form>
         </div>
     </div>
 
+    <!-- 地图展示 -->
     <div class="row map">
         <div class="container">
             <div class="span5 box_wrapp">
                 <div class="box_cont">
-                   <%= raw @page.content %>
+                   <h2>成都瑞信云科技有限公司</h2>
+                   <p>地址：</p>
                 </div>
             </div>
         </div>
