--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <% Post.recent(5).each do |post| %>
-                            <li><%= link_to post.title, "/blogpost?id=#{post.id}"%></li>
+                            <li><%= link_to post.title, "/blogpost/#{post.id}"%></li>
                         <% end %>
                         <li><a href="/blog">更多...</a></li>
                     </ul>
@@ -56,7 +56,7 @@
                     </ul>
                 </li>
 
-                <li><a href="pages/contact">联系我们</a></li>
+                <li><a href="/pages/contact">联系我们</a></li>
                 <% if user_signed_in? %>
                     <li><%= link_to '后台', user_path(current_user), class: "btn-header" %></li>
                 <% else %>
