--- a/app/views/pages/blogpost.html.erb
+++ b/app/views/pages/blogpost.html.erb
@@ -5,12 +5,12 @@
 
 <div id="blog_post">
     <div class="container">
-        <div class="section_header">
+  <!--  <div class="section_header">
             <h3>行业讲坛</h3>
 
             <input type="text" class="input-large search-query" placeholder="搜索...">
         </div>
-
+ -->
         <div class="row">
             <div class="span8">
                 <%#= image_tag @post.image_url %>
@@ -56,82 +56,19 @@
             
             <!-- SideBar -->
             <div class="span3 sidebar offset1">
-                <div class="box">
-                    <div class="sidebar_header">
-                        <h4>Menu</h4>
-                    </div>
+                <div class="sidebar_header">
+                    <h4>最近更新...</h4>
+                </div>
 
-                    <ul class="sidebar_menu">
-                        <ul>
-                            <li><a href="#">Coffee</a></li>
-                            <li><a href="#">Design</a></li>
-                            <li><a href="#">Music</a></li>
-                            <li><a href="#">Photography</a></li>
-                            <li><a href="#">Packaging   </a></li>
-                        </ul>
+                <ul class="sidebar_menu">
+                    <ul>
+                      <% Post.recent(10).each do |post|%>
+                        <li>>> <%=link_to post.title.to_s.truncate(12), "/blogpost/#{post.id}" %></li>
+                      <% end %>
                     </ul>
-                </div>
-                
-                <div class="box box2">
-                    <div class="sidebar_header">
-                        <h4>Recent Posts</h4>
-                    </div>
-
-                    <div class="recent">
-                        <span>
-                            <img src="/assets/recent_photos.jpg" alt="">
-                        </span>
-                        <p>There are many  embarrassing hidden in the middle of text.</p>
-                    </div>
-                    <div class="recent">
-                        <span>
-                            <img src="/assets/recent_photos.jpg" alt="">
-                        </span>
-                        <p>There are many  embarrassing hidden in the middle of text.</p>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="sidebar_header">
-                        <h4>Popular photos</h4>
-                    </div>
-                    <ul class="recent_photos">
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                        <li>
-                            <a href="#"><img src="/assets/recent_photos.jpg"></a></li>
-                    </ul>
-                </div>
-
-                <div class="box last">
-                    <div class="sidebar_header">
-                        <h4>Archives</h4>
-                    </div>
-
-                    <ul class="sidebar_menu">
-                        <ul>
-                            <li><a href="#">January 2012</a></li>
-                            <li><a href="#">May 2012</a></li>
-                            <li><a href="#">August 2011</a></li>
-                            <li><a href="#">October 2011</a></li>
-                        </ul>
-                    </ul>
-                </div>
+                </ul>
             </div>
+            <!-- SideBar -->
         </div>
     </div>
 </div>
