--- a/public/page/about.html.erb
+++ b/public/page/about.html.erb
@@ -1,13 +1,8 @@
-废弃！
-
-<%= content_for(:head) do %>
-  <%= stylesheet_link_tag "theme/about" %>
-<% end %>
-
+<!--关于我们-->
 <div id="aboutus">
     <div class="container">
         <div class="section_header">
-            <h3></h3>
+            <h3>关于我们</h3>
         </div>
         <div class="row">
             <div class="span6 intro">
@@ -19,20 +14,21 @@
             <div class="span6 flexslider">
                   <ul class="slides">
                     <li style="width: 100%; float: left; margin-right: -100%; position: relative; display: none;" class="">
-                      <img src="/assets/about_slide1.jpg">
+                      <img src="/assets/about_slide1.png">
                     </li>
                     <li style="width: 100%; float: left; margin-right: -100%; position: relative; display: none;" class="">
-                      <img src="/assets/about_slide1.jpg">
+                      <img src="/assets/about_slide2.png">
                     </li>
                     <li style="width: 100%; float: left; margin-right: -100%; position: relative; display: list-item;" class="flex-active-slide">
-                      <img src="/assets/about_slide1.jpg">
+                      <img src="/assets/about_slide3.png">
                     </li>
                   </ul>
-            <ol class="flex-control-nav flex-control-paging"><li><a class="">1</a></li><li><a class="">2</a></li><li><a class="flex-active">3</a></li></ol><ul class="flex-direction-nav"><li><a class="flex-prev" href="#">Previous</a></li><li><a class="flex-next" href="#">Next</a></li></ul></div>
+            <ol class="flex-control-nav flex-control-paging"><li><a class="">1</a></li><li><a class="">2</a></li><li><a class="flex-active">3</a></li></ol><ul class="flex-direction-nav"><li><a class="flex-prev" href="#">上一页</a></li><li><a class="flex-next" href="#">下一页</a></li></ul></div>
         </div>
     </div>
 </div>
 
+<!-- 价值观 -->
 <div id="process">
     <div class="container">
         <div class="section_header">
