--- a/app/assets/stylesheets/theme/blog.css
+++ b/app/assets/stylesheets/theme/blog.css
@@ -29,6 +29,7 @@
 	margin-bottom: 40px;
 	border-radius: 4px;
 	box-shadow: 1px 1px 2px 0px #E0E0E0;
+	height: 450px;
 }
 #blog .post_row .last{
 	margin-right: 0;
