--- a/app/views/pages/_slider.html.erb
+++ b/app/views/pages/_slider.html.erb
@@ -13,7 +13,7 @@
 
     For the backgrounds, you can combine from the bgs folder :D
 -->
-<article class="slide" id="showcasing" style="background: url('/assets/backgrounds/landscape.png') repeat-x top center;">
+<article class="slide" id="showcasing" style="background: url('/assets/backgrounds/color-splash.jpg') repeat-x top center;">
     <img class="asset left-30 sp600 t120 z1" src="/assets/slides/scene1/macbook.png" />
     <div class="info">
         <h2>APP，把企业放到客户的手机里！</h2>
@@ -22,7 +22,7 @@
         </span>
     </div>
 </article>
-<article class="slide" id="ideas" style="background: url('/assets/backgrounds/aqua.jpg') repeat-x top center;">
+<article class="slide" id="ideas" style="background: url('/assets/backgrounds/flower.jpg') repeat-x top center;">
     <div class="info">
         <h2>APP，有效创新服务体验，提升企业价值！</h2>
         <span style="color: #fff;">
@@ -34,7 +34,7 @@
     <img class="asset left-210 sp600 t213 z2" src="/assets/slides/scene2/middle.png" />
     <img class="asset left60 sp600 t260 z1" src="/assets/slides/scene2/right.png" />
 </article>
-<article class="slide" id="tour" style="background: url('/assets/backgrounds/color-splash.jpg') repeat-x top center;">
+<article class="slide" id="tour" style="background: url('/assets/backgrounds/orange.jpg') repeat-x top center;">
     <img class="asset left-472 sp650 t210 z3" src="/assets/slides/scene3/ipad.png" />
     <img class="asset left-365 sp600 t270 z4" src="/assets/slides/scene3/iphone.png" />
     <img class="asset left-350 sp450 t135 z2" src="/assets/slides/scene3/desktop.png" />
@@ -45,7 +45,7 @@
         <!-- <a href="features.html">实用+互动+分享+增值</a> -->
     </div>
 </article>
-<article class="slide" id="responsive" style="background: url('/assets/backgrounds/indigo.jpg') repeat-x top center;">
+<article class="slide" id="responsive" style="background: url('/assets/backgrounds/landscape.png') repeat-x top center;">
     <img class="asset left-472 sp600 t120 z3" src="/assets/slides/scene4/html5.png" />
     <img class="asset left-190 sp500 t120 z2" src="/assets/slides/scene4/css3.png" />
     <div class="info">
