--- a/app/views/product_items/_form.html.erb
+++ b/app/views/product_items/_form.html.erb
@@ -5,8 +5,8 @@
     <%= f.association :product_cate, include_blank: false %>
     <%= f.input :title, input_html: {class: 'input-block-level'} %>
     <%= f.input :image_url, input_html: {class: 'input-block-level'}  %>
-    <%= f.input :content, input_html: {class: 'input-block-level', rows: 10}  %>
-    <%#= f.input :content, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'simple'}, rows: 40 } %>
+    <%#= f.input :content, input_html: {class: 'input-block-level', rows: 10}  %>
+    <%= f.input :content, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'simple'}, rows: 40 } %>
   </div>
 
   <div class="form-actions">
