--- a/app/views/pages/_slider.html.erb
+++ b/app/views/pages/_slider.html.erb
@@ -45,7 +45,7 @@
         <!-- <a href="features.html">实用+互动+分享+增值</a> -->
     </div>
 </article>
-<article class="slide" id="responsive" style="background: url('/assets/backgrounds/landscape.png') repeat-x top center;">
+<article class="slide" id="responsive" style="background: url('/assets/backgrounds/aqua.jpg') repeat-x top center;">
     <img class="asset left-472 sp600 t120 z3" src="/assets/slides/scene4/html5.png" />
     <img class="asset left-190 sp500 t120 z2" src="/assets/slides/scene4/css3.png" />
     <div class="info">
