--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -28,7 +28,7 @@
                         <li><a href="/pages/features">功能介绍</a></li>
                         <li><a href="/product_cates/1">成功案例</a></li>
                         <li><a href="/pages/showcase">行业应用方案</a></li>
-                        <li><a href="/pages/markting">企业网络营销整体托管</a></li>
+                        <li><a href="/pages/markting">企业智能网络营销系统</a></li>
                     </ul>
                 </li>
                 
