--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <ul class="breadcrumb">
     <li><%= link_to '修改文章', edit_post_path(@post), class: 'btn btn-primary', type: 'button' %><span class="divider">/</span></li>
     <li><%= link_to '删除文章', @post, method: :delete, data: { confirm: '确定要删除?' }, type: 'button' %><span class="divider">/</span></li>
-    <li><%= link_to '前台预览', "/blogpost?id=#{@post.id}", target: '_blank', type: 'button' %><span class="divider">/</span></li>
+    <li><%= link_to '前台预览', "/blogpost/#{@post.id}", target: '_blank', type: 'button' %><span class="divider">/</span></li>
     <li><%= link_to '返回', posts_url %></li>
   </ul>
 </div>
@@ -18,9 +18,9 @@
   </p>
 
   <p>
-    <strong>Cate:</strong>
+    <strong>分类:</strong>
     <%= @post.cate %>
-    <strong>Keywords:</strong>
+    <strong>关键词:</strong>
     <%= @post.keywords %>
   </p>
 </div>
