--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -8,11 +8,11 @@
                 </h3>
                 <% Post.recent(2).each do |post| %>
                     <div class="post">
-                        <%= link_to image_tag(post.image_url, width: '60px', height: '60px', class: 'img-circle'), "/blogpost?id=#{post.id}", target: '_blank' %>
+                        <%= link_to image_tag(post.image_url, width: '60px', height: '60px', class: 'img-circle'), "/blogpost/#{post.id}", target: '_blank' %>
                         <div class="date">
                            <%= post.updated_at.to_s(:db) %>
                         </div>
-                        <%= link_to post.title.to_s.truncate(20), "/blogpost/{post.id}", class: 'title' %>
+                        <%= link_to post.title.to_s.truncate(20), "/blogpost/#{post.id}", class: 'title' %>
                     </div>
                 <% end %>
             </div>
