--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -5,6 +5,10 @@
       width: 90px;
       height: 90px;
     }
+    #c_img{
+      width: 90px;
+      height: 90px;
+    }
   </style>
 
 <% end %>
