--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -3,10 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "瑞信云科技" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rxy Cloud" %>">
+    <meta name="keywords" content="<%= content_for?(:keywords) ? yield(:keywords) : "瑞信云科技" %>">
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "瑞信云科技 Rxy Cloud" %>">
     <%= stylesheet_link_tag "pages" %>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-     <%= yield(:head) %>
+    <%= yield(:head) %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     
