--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -30,9 +30,9 @@
                     </div>
                     <div class="author">
                         <img src="/assets/user-display.png" />
-                        <div class="name">瑞信云科技总裁</div>
+                        <div class="name">瑞信云.小宋</div>
                         <div class="info">
-                            彭承
+                            18583275189
                         </div>
                     </div>
                 </div>
@@ -46,9 +46,9 @@
                     <input name="utf8" type="hidden" value="&#x2713;" />
                     <input name="authenticity_token" type="hidden" value="uV/dlXiSmha2AdbSoO0R6fojOEPBqxabidgXEXjvW64=" />   
        
-                    <input type="text" name="comment[name]" placeholder="姓名" />
-                    <input type="text" name="comment[mobile_phone]" placeholder="手机号码, 11位" />
-                    <textarea rows="3" name="comment[content]" placeholder="内容"></textarea>
+                    <input type="text" name="comment[name]" placeholder="姓名" style="background-color: #eee; color: #000;"/>
+                    <input type="text" name="comment[mobile_phone]" placeholder="手机号码, 11位" style="background-color: #eee; color: #000;" />
+                    <textarea rows="3" name="comment[content]" placeholder="内容" style="background-color: #eee; color: #000;"></textarea>
                     <input type="submit" value="提交" />
                 <% end %>
             </div>
