--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,5 +27,5 @@
     <%#= link_to '注册', new_user_registration_path %>
     </li>
   <% end %>
-  <li><%= link_to '去前台', '/' %></li>
+  <li><%= link_to '去前台', '/', target: '_blank' %></li>
 </ul>
