--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,3 +27,7 @@
     <% end %>
   </tbody>
 </table>
+<br>
+<div class="pagination" style="text-align: center;">
+  <%= will_paginate @pages %>
+</div>
