--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,7 +25,9 @@
     <% end %>
   </tbody>
 </table>
-
+<div class="pagination" style="text-align: center;">
+  <%= will_paginate @posts %>
+</div>
 <br>
-<%= will_paginate @posts %>
+
 
