--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -28,7 +28,7 @@
                         <li><a href="/pages/features">功能介绍</a></li>
                         <li><a href="/product_cates/1">成功案例</a></li>
                         <li><a href="/pages/showcase">行业应用方案</a></li>
-                        <li><a href="/pages/markting">企业智能网络营销系统</a></li>
+                        <li><a href="/pages/markting">智能网络营销系统:雨服务</a></li>
                     </ul>
                 </li>
                 
@@ -58,7 +58,7 @@
 
                 <li><a href="/pages/contact">联系我们</a></li>
                 <% if user_signed_in? %>
-                    <li><%= link_to '后台', user_path(current_user), class: "btn-header" %></li>
+                    <li><%= link_to '后台', user_path(current_user), class: "btn-header", target: "_blank" %></li>
                 <% else %>
                     <li><%= link_to '登录', new_user_session_path, class: "btn-header" %></li>
                 <% end %>
