--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -9,7 +9,7 @@
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
-      <th>分类</th>
+      <th>分类/编号</th>
       <th>标题</th>
       <th>图片</th>
       <th colspan="3">操作</th>
@@ -19,7 +19,7 @@
   <tbody>
     <% @product_items.each do |product_item| %>
       <tr>
-        <td><%= product_item.product_cate.name %></td>
+        <td><%= product_item.product_cate.name %>/.<%= product_item.id %></td>
         <td><%= product_item.title %></td>
         <td><%= image_tag product_item.image_url, width: '60px', height: '60px' %></td>
         <td><%= link_to '查看', product_item %></td>
@@ -29,7 +29,9 @@
     <% end %>
   </tbody>
 </table>
-
+<div class="pagination" style="text-align: center;">
+  <%= will_paginate @product_items %>
+</div>
 <br>
 
 <%= link_to '添加案例', new_product_item_path, class: 'btn btn-primary' %>
