--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -11,7 +11,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
-        <%= link_to image_tag("/assets/logo2-2.png", width: '220px', alt: '瑞信云'), root_path, :class => 'brand' %>
+        <% if is_mobile_device? %>
+            <%= link_to "瑞信云", root_path, :class => 'brand' %>
+        <% else %>
+            <%= link_to image_tag("/assets/logo2-2.png", width: '220px', alt: '瑞信云'), root_path, :class => 'brand' %>
+        <% end %>
         <div class="nav-collapse collapse">
             <ul class="nav pull-right">
                 <li><a href="/" class="active">首页</a></li>
